feat: history en las categorias mejorado

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1179,7 +1179,8 @@
                     "hideTransactions": "Hide",
                     "searchPlaceholder": "Search transactions...",
                     "noSearchResults": "No transactions found",
-                    "tryDifferentSearch": "Try a different search term"
+                    "tryDifferentSearch": "Try a different search term",
+                    "transactions": "transactions"
                 },
                 "delete": {
                     "title": "Delete Category",
