--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1180,7 +1180,8 @@
                     "searchPlaceholder": "Search transactions...",
                     "noSearchResults": "No transactions found",
                     "tryDifferentSearch": "Try a different search term",
-                    "transactions": "transactions"
+                    "transactions": "Transactions",
+                    "noTransactions": "No transactions"
                 },
                 "delete": {
                     "title": "Delete Category",
